--- a/shiro-spring/pom.xml
+++ b/shiro-spring/pom.xml
@@ -83,6 +83,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.9</version>
+        </dependency>
+
     </dependencies>
 
 </project>
